# NERD_Submission

./: .gitignore  .version  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/bookworm/: Dockerfile  devcontainer.json
.devcontainer/trixie/: Dockerfile  devcontainer.json
cmake/: CheckCXXCompilerX86ArchFlag.cmake  Submission.cmake
documentation/: NERDCppExercises.md
source/Concurrency/: CMakeLists.txt  context.h  main.cpp
source/Concurrency/2025/: REC2659.cpp  REC2659.h  dev_log_REC2659.md
source/Helpers/: CMakeLists.txt  Helpers.cpp  Helpers.h  stb_image_write.cpp
source/LeCompteEstBon/: CMakeLists.txt  main.cpp
source/LeCompteEstBon/2025/: REC2659.cpp  REC2659.h
source/MoMoMotus/: CMakeLists.txt  main.cpp
source/MoMoMotus/2025/: REC2659.cpp  REC2659.h
source/StarSystem/: CMakeLists.txt  main.cpp
source/StarSystem/2025/: REC2659.cpp  REC2659.h  dev_log_REC2659.md
source/T10/: CMakeLists.txt  main.cpp
source/T10/2025/: REC2659.cpp  REC2659.h
